
plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'com.github.johnrengelman.shadow' version '5.1.0'

}

group 'seedu.duke'
version '0.1.3'
sourceCompatibility = 1.11


def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

dependencies {
    compile "org.openjfx:javafx-base:11:win"
    compile "org.openjfx:javafx-graphics:11:win"
    compile "org.openjfx:javafx-controls:11:win"
    compile "org.openjfx:javafx-fxml:11:win"

    compile "org.openjfx:javafx-base:11:linux"
    compile "org.openjfx:javafx-graphics:11:linux"
    compile "org.openjfx:javafx-controls:11:linux"
    compile "org.openjfx:javafx-fxml:11:linux"

    compile "org.openjfx:javafx-base:11:mac"
    compile "org.openjfx:javafx-graphics:11:mac"
    compile "org.openjfx:javafx-controls:11:mac"
    compile "org.openjfx:javafx-fxml:11:mac"
}

application {
    // Change this to your main class.
    mainClassName = "seedu.duke.DukeFX"
}

jar {
    manifest {
        attributes 'Main-Class': 'seedu.duke.DukeFX'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}

checkstyle {
    toolVersion = '8.23'
}

test {
    useJUnitPlatform()
}


repositories {
    mavenCentral()
}
